initial commit for vectorDB

--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 LOCAL_URL=mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.2.6
+VDB_HOST=10.248.58.149
 RAW_DATA_PATH=../_static/news_raw_data.json
 RULER_PATH=../_static/entity_ruler
