add mapping code

--- a/.env
+++ b/.env
@@ -1,4 +1,8 @@
 LOCAL_URL=mongodb://127.0.0.1:27017/?directConnection=true&serverSelectionTimeoutMS=2000&appName=mongosh+2.2.6
-VDB_HOST=10.248.58.149
+VDB_HOST=
 RAW_DATA_PATH=../_static/news_raw_data.json
 RULER_PATH=../_static/entity_ruler
+COMPANY_PATH_NAME=company_name.csv
+ECON_PATH_NAME=economies.csv
+HUGGINGFACE_TOKEN=
+EMBEDDING_API=
