--- a/requirements.txt
+++ b/requirements.txt
@@ -1,80 +1,103 @@
-aiohttp==3.9.5
+aiohappyeyeballs==2.4.0
+aiohttp==3.10.5
 aiosignal==1.3.1
 annotated-types==0.7.0
-attrs==23.2.0
-certifi==2024.6.2
+anyio==4.4.0
+attrs==24.2.0
+blis==0.7.11
+catalogue==2.0.10
+certifi==2024.8.30
 charset-normalizer==3.3.2
+click==8.1.7
+cloudpathlib==0.19.0
 colorama==0.4.6
+confection==0.1.5
+cymem==2.0.8
 dataclasses-json==0.6.7
-datasets==2.20.0
-dill==0.3.8
 dnspython==2.6.1
-einops==0.8.0
+en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 environs==9.5.0
 filelock==3.15.4
 frozenlist==1.4.1
-fsspec==2024.5.0
+fsspec==2024.9.0
 greenlet==3.0.3
-grpcio==1.63.0
-huggingface-hub==0.23.4
-idna==3.7
-inquirerpy==0.3.4
-intel-openmp==2021.4.0
+grpcio==1.66.1
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.2
+huggingface-hub==0.24.6
+idna==3.8
 Jinja2==3.1.4
 joblib==1.4.2
 jsonpatch==1.33
 jsonpointer==3.0.0
-langchain==0.2.5
-langchain-community==0.2.5
-langchain-core==0.2.9
-langchain-text-splitters==0.2.1
-langsmith==0.1.81
+langchain==0.2.16
+langchain-community==0.2.16
+langchain-core==0.2.38
+langchain-text-splitters==0.2.4
+langcodes==3.4.0
+langsmith==0.1.114
+language_data==1.2.0
+Levenshtein==0.25.1
+marisa-trie==1.2.0
+markdown-it-py==3.0.0
 MarkupSafe==2.1.5
-marshmallow==3.21.3
-mkl==2021.4.0
+marshmallow==3.22.0
+mdurl==0.1.2
 mpmath==1.3.0
 multidict==6.0.5
-multiprocess==0.70.16
+murmurhash==1.0.10
 mypy-extensions==1.0.0
 networkx==3.3
+nltk==3.9.1
 numpy==1.26.4
-orjson==3.10.5
+orjson==3.10.7
 packaging==24.1
 pandas==2.2.2
-pfzy==0.3.4
-pillow==10.3.0
-prompt_toolkit==3.0.47
-protobuf==5.27.1
-pyarrow==16.1.0
-pyarrow-hotfix==0.6
-pydantic==2.7.4
-pydantic_core==2.18.4
-pymilvus==2.4.4
-pymongo==4.7.3
+pillow==10.4.0
+preshed==3.0.9
+protobuf==5.28.0
+pydantic==2.8.2
+pydantic_core==2.20.1
+Pygments==2.18.0
+pymilvus==2.4.6
+pymongo==4.8.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
 pytz==2024.1
-PyYAML==6.0.1
-regex==2024.5.15
+PyYAML==6.0.2
+rapidfuzz==3.9.7
+regex==2024.7.24
 requests==2.32.3
-safetensors==0.4.3
-scikit-learn==1.5.0
-scipy==1.13.1
+rich==13.8.0
+safetensors==0.4.4
+scikit-learn==1.5.1
+scipy==1.14.1
 sentence-transformers==3.0.1
+shellingham==1.5.4
 six==1.16.0
-SQLAlchemy==2.0.31
-sympy==1.12.1
-tbb==2021.13.0
-tenacity==8.4.1
+smart-open==7.0.4
+sniffio==1.3.1
+spacy==3.7.6
+spacy-legacy==3.0.12
+spacy-loggers==1.0.5
+SQLAlchemy==2.0.34
+srsly==2.4.8
+sympy==1.13.2
+tenacity==8.5.0
+thinc==8.2.5
 threadpoolctl==3.5.0
 tokenizers==0.19.1
-tqdm==4.66.4
-transformers==4.41.2
+torch==2.4.1
+tqdm==4.66.5
+transformers==4.44.2
+typer==0.12.5
 typing-inspect==0.9.0
 typing_extensions==4.12.2
 tzdata==2024.1
 ujson==5.10.0
 urllib3==2.2.2
-wcwidth==0.2.13
-xxhash==3.4.1
-yarl==1.9.4
+wasabi==1.1.3
+weasel==0.4.1
+wrapt==1.16.0
+yarl==1.9.11
