--- a/requirements.txt
+++ b/requirements.txt
@@ -14,6 +14,7 @@ colorama==0.4.6
 confection==0.1.5
 cymem==2.0.8
 dataclasses-json==0.6.7
+deep-translator==1.11.4
 dnspython==2.6.1
 en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl#sha256=86cc141f63942d4b2c5fcee06630fd6f904788d2f0ab005cce45aadb8fb73889
 environs==9.5.0
@@ -50,6 +51,7 @@ murmurhash==1.0.10
 mypy-extensions==1.0.0
 networkx==3.3
 nltk==3.9.1
+newsdataapi==0.1.21
 numpy==1.26.4
 orjson==3.10.7
 packaging==24.1
